# assesment2

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt  test_main.py
.github/workflows/: ci.yml
app/: crud.py  database.py  main.py  models.py  test_main.py
tests/: conftest.py  test_main.py  test_user.py
