[project]
name = "fastapi-mongo-app"
version = "0.1.0"
description = "FastAPI + MongoDB Example with CI/CD"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pymongo>=4.6.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic[email]>=2.5.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "tests/",
    ".env*",
    "docker-compose.yml",
    "Dockerfile",
    ".github/",
    ".git/",
    "*.md"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]